Lógica de login refeita: Admissão de mais de uma pessoa no plano

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,7 +1,7 @@
 [theme]
 base="dark"
-primaryColor="#FF4B4B"
-backgroundColor="#000000"
-secondaryBackgroundColor="#1C1C1C"
-textColor="#FFFFFF"
+primaryColor="#ffe81eff"
+backgroundColor="#100446ff"
+secondaryBackgroundColor="#05022bff"
+textColor="#db9410ff"
 font="sans serif"
